--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "gulp-rename": "^1.2.2",
     "gulp-rev-append": "^0.1.6",
     "gulp-uglify": "^2.0.0",
-    "gulp-useref": "^3.1.2"
+    "gulp-useref": "^3.1.2",
+    "http-proxy-middleware": "^0.17.2",
+    "mockjs": "^1.0.1-beta3"
   }
 }
