--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "gulp-useref": "^3.1.2",
     "http-proxy-middleware": "^0.17.2",
     "mocha": "^3.1.2",
-    "mockjs": "^1.0.1-beta3"
+    "mockjs": "^1.0.1-beta3",
+    "node-mocks-http": "^1.5.4"
   }
 }
