--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "browser-sync": "^2.17.5",
     "chai": "^3.5.0",
     "chai-http": "^3.0.0",
+    "child_process": "^1.0.2",
     "codecov": "^1.0.1",
     "eslint": "^3.10.2",
     "eslint-config-airbnb": "^13.0.0",
@@ -45,6 +46,7 @@
     "gulp-less": "^3.1.0",
     "gulp-load-plugins": "^1.3.0",
     "gulp-minify-css": "^1.2.4",
+    "gulp-notify": "^2.2.0",
     "gulp-rename": "^1.2.2",
     "gulp-rev-append": "^0.1.6",
     "gulp-uglify": "^2.0.0",
@@ -52,6 +54,7 @@
     "http-proxy-middleware": "^0.17.2",
     "mocha": "^3.1.2",
     "mockjs": "^1.0.1-beta3",
-    "node-mocks-http": "^1.5.4"
+    "node-mocks-http": "^1.5.4",
+    "through2": "^2.0.2"
   }
 }
