--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "gulp-notify": "^2.2.0",
     "gulp-rename": "^1.2.2",
     "gulp-rev-append": "^0.1.6",
+    "gulp-strip-debug": "^1.1.0",
     "gulp-uglify": "^2.0.0",
     "gulp-useref": "^3.1.2",
     "http-proxy-middleware": "^0.17.2",
