--- a/package.json
+++ b/package.json
@@ -47,11 +47,13 @@
     "gulp-load-plugins": "^1.3.0",
     "gulp-minify-css": "^1.2.4",
     "gulp-notify": "^2.2.0",
+    "gulp-plumber": "^1.1.0",
     "gulp-rename": "^1.2.2",
     "gulp-rev-append": "^0.1.6",
     "gulp-strip-debug": "^1.1.0",
     "gulp-uglify": "^2.0.0",
     "gulp-useref": "^3.1.2",
+    "gulp-util": "^3.0.7",
     "http-proxy-middleware": "^0.17.2",
     "mocha": "^3.1.2",
     "mockjs": "^1.0.1-beta3",
