--- a/package.json
+++ b/package.json
@@ -4,13 +4,10 @@
   "description": "yunle template gulp",
   "main": "index.js",
   "scripts": {
-    "dev": "gulp",
-    "build": "gulp build",
-    "build-html": "gulp build-html",
-    "build-less": "gulp build-less",
-    "build-images": "gulp build-images",
-    "build-eslint": "gulp build-eslint",
-    "build-script": "gulp build-script",
+    "clean": "rimraf dist && mkdir dist",
+    "clean_dev": "rimraf .tmp && mkdir .tmp",
+    "dev": "npm run clean_dev && gulp serve",
+    "build": "npm run clean && gulp build",
     "test": "mocha  --recursive"
   },
   "repository": {
@@ -24,18 +21,19 @@
   },
   "homepage": "https://github.com/hexiao-o/yunle-template-gulp#readme",
   "devDependencies": {
+    "autoprefixer": "^6.5.3",
     "browser-sync": "^2.17.5",
     "chai": "^3.5.0",
     "chai-http": "^3.0.0",
     "child_process": "^1.0.2",
     "codecov": "^1.0.1",
+    "cssnano": "^3.9.0",
     "eslint": "^3.10.2",
     "eslint-config-airbnb": "^13.0.0",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^3.0.1",
     "eslint-plugin-react": "^6.7.1",
     "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^3.1.1",
     "gulp-cache": "^0.4.5",
     "gulp-clean": "^0.3.2",
     "gulp-concat": "^2.6.0",
@@ -48,16 +46,21 @@
     "gulp-minify-css": "^1.2.4",
     "gulp-notify": "^2.2.0",
     "gulp-plumber": "^1.1.0",
+    "gulp-postcss": "^6.2.0",
     "gulp-rename": "^1.2.2",
-    "gulp-rev-append": "^0.1.6",
+    "gulp-rev-append": "^0.1.7",
+    "gulp-sourcemaps": "^1.9.1",
     "gulp-strip-debug": "^1.1.0",
     "gulp-uglify": "^2.0.0",
     "gulp-useref": "^3.1.2",
     "gulp-util": "^3.0.7",
     "http-proxy-middleware": "^0.17.2",
+    "mkdir": "0.0.2",
     "mocha": "^3.1.2",
     "mockjs": "^1.0.1-beta3",
     "node-mocks-http": "^1.5.4",
+    "nodeman": "^1.1.2",
+    "rimraf": "^2.5.4",
     "through2": "^2.0.2"
   }
 }
