--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "clean_dev": "rimraf .tmp && mkdir .tmp",
     "dev": "npm run clean_dev && gulp serve",
     "build": "npm run clean && gulp build",
+    "build-images": "gulp build-images",
     "test": "mocha  --recursive"
   },
   "repository": {
@@ -55,6 +56,7 @@
     "gulp-useref": "^3.1.2",
     "gulp-util": "^3.0.7",
     "http-proxy-middleware": "^0.17.2",
+    "imagemin-pngquant": "^5.0.0",
     "mkdir": "0.0.2",
     "mocha": "^3.1.2",
     "mockjs": "^1.0.1-beta3",
