--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "clean": "rimraf dist && mkdir dist",
     "clean_dev": "rimraf .tmp && mkdir .tmp",
     "dev": "npm run clean_dev && gulp serve",
-    "build": "npm run clean && gulp build",
+    "build": "npm run clean && gulp build --env production",
     "build-images": "gulp build-images",
     "test": "mocha  --recursive"
   },
@@ -29,14 +29,13 @@
     "child_process": "^1.0.2",
     "codecov": "^1.0.1",
     "cssnano": "^3.9.0",
-    "eslint": "^3.10.2",
     "eslint-config-airbnb": "^13.0.0",
     "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^3.0.1",
-    "eslint-plugin-react": "^6.7.1",
+    "eslint-plugin-jsx-a11y": "^2.2.3",
+    "eslint-plugin-react": "^6.8.0",
     "gulp": "^3.9.1",
     "gulp-cache": "^0.4.5",
-    "gulp-clean": "^0.3.2",
+    "gulp-changed": "^1.3.2",
     "gulp-concat": "^2.6.0",
     "gulp-eslint": "^3.0.1",
     "gulp-htmlmin": "^3.0.0",
@@ -57,6 +56,7 @@
     "gulp-util": "^3.0.7",
     "http-proxy-middleware": "^0.17.2",
     "imagemin-pngquant": "^5.0.0",
+    "minimist": "^1.2.0",
     "mkdir": "0.0.2",
     "mocha": "^3.1.2",
     "mockjs": "^1.0.1-beta3",
@@ -64,5 +64,8 @@
     "nodeman": "^1.1.2",
     "rimraf": "^2.5.4",
     "through2": "^2.0.2"
+  },
+  "dependencies": {
+    "gulp-eslint": "^3.0.1"
   }
 }
