--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,8 +1,8 @@
 {
   "env": {
-      "node": false,
-      "commonjs": false,
-      "es6": false
+    "node": true,
+    "commonjs": false,
+    "es6": false
   },
   "extends": "airbnb"
 }
