--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "clean": "rimraf dist && mkdir dist",
     "clean_dev": "rimraf .tmp && mkdir .tmp",
-    "dev": "npm run clean_dev && gulp serve",
+    "dev": "npm run clean_dev && gulp",
     "build": "npm run clean && gulp build --env production",
     "build-images": "gulp build-images",
     "test": "mocha  --recursive"
@@ -22,50 +22,36 @@
   },
   "homepage": "https://github.com/hexiao-o/yunle-template-gulp#readme",
   "devDependencies": {
-    "autoprefixer": "^6.5.3",
-    "browser-sync": "^2.17.5",
+    "autoprefixer": "^6.6.1",
+    "babel-preset-es2015": "^6.18.0",
+    "browser-sync": "^2.18.6",
     "chai": "^3.5.0",
     "chai-http": "^3.0.0",
-    "child_process": "^1.0.2",
-    "codecov": "^1.0.1",
-    "cssnano": "^3.9.0",
-    "eslint-config-airbnb": "^13.0.0",
+    "cssnano": "^3.10.0",
+    "eslint": "^3.13.0",
+    "eslint-config-airbnb": "^14.0.0",
     "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^2.2.3",
-    "eslint-plugin-react": "^6.8.0",
+    "eslint-plugin-jsx-a11y": "^3.0.2",
+    "eslint-plugin-react": "^6.9.0",
     "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
     "gulp-cache": "^0.4.5",
     "gulp-changed": "^1.3.2",
-    "gulp-concat": "^2.6.0",
-    "gulp-eslint": "^3.0.1",
     "gulp-htmlmin": "^3.0.0",
-    "gulp-if": "^2.0.1",
-    "gulp-imagemin": "^3.1.0",
-    "gulp-less": "^3.1.0",
-    "gulp-load-plugins": "^1.3.0",
-    "gulp-minify-css": "^1.2.4",
+    "gulp-imagemin": "^3.1.1",
+    "gulp-less": "^3.3.0",
+    "gulp-load-plugins": "^1.4.0",
     "gulp-notify": "^2.2.0",
     "gulp-plumber": "^1.1.0",
     "gulp-postcss": "^6.2.0",
-    "gulp-rename": "^1.2.2",
     "gulp-rev-append": "^0.1.7",
-    "gulp-sourcemaps": "^1.9.1",
-    "gulp-strip-debug": "^1.1.0",
     "gulp-uglify": "^2.0.0",
-    "gulp-useref": "^3.1.2",
-    "gulp-util": "^3.0.7",
-    "http-proxy-middleware": "^0.17.2",
+    "http-proxy-middleware": "^0.17.3",
     "imagemin-pngquant": "^5.0.0",
-    "minimist": "^1.2.0",
     "mkdir": "0.0.2",
-    "mocha": "^3.1.2",
+    "mocha": "^3.2.0",
     "mockjs": "^1.0.1-beta3",
-    "node-mocks-http": "^1.5.4",
-    "nodeman": "^1.1.2",
-    "rimraf": "^2.5.4",
-    "through2": "^2.0.2"
-  },
-  "dependencies": {
-    "gulp-eslint": "^3.0.1"
+    "node-mocks-http": "^1.5.5",
+    "rimraf": "^2.5.4"
   }
 }
