--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint-plugin-react": "^6.9.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
+    "gulp-base64": "^0.1.3",
     "gulp-cache": "^0.4.5",
     "gulp-changed": "^1.3.2",
     "gulp-htmlmin": "^3.0.0",
