--- a/package.json
+++ b/package.json
@@ -1,69 +1,44 @@
 {
-  "name": "yunle-template-gulp",
-  "version": "0.0.1",
-  "description": "yunle template gulp",
-  "main": "index.js",
+  "name": "gatsby-starter-default",
+  "description": "Gatsby default starter",
+  "version": "1.0.0",
+  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "dependencies": {
+    "antd": "^3.10.4",
+    "classnames": "^2.2.6",
+    "gatsby": "^2.0.19",
+    "gatsby-image": "^2.0.15",
+    "gatsby-plugin-antd": "^2.0.2",
+    "gatsby-plugin-manifest": "^2.0.5",
+    "gatsby-plugin-offline": "^2.0.11",
+    "gatsby-plugin-react-helmet": "^3.0.0",
+    "gatsby-plugin-sharp": "^2.0.7",
+    "gatsby-source-filesystem": "^2.0.4",
+    "gatsby-transformer-sharp": "^2.1.4",
+    "qrcode.react": "^0.8.0",
+    "react": "^16.5.1",
+    "react-container-query": "^0.11.0",
+    "react-dom": "^16.5.1",
+    "react-helmet": "^5.2.0"
+  },
+  "keywords": [
+    "gatsby"
+  ],
+  "license": "MIT",
   "scripts": {
-    "clean": "rimraf dist && mkdir dist",
-    "clean_dev": "rimraf .tmp && mkdir .tmp",
-    "dev": "npm run clean_dev && gulp --env development",
-    "build": "npm run clean && gulp build --env production",
-    "html": "gulp html  --env development",
-    "build-html": "gulp html  --env production",
-    "less": "gulp less  --env development",
-    "build-less": "gulp less  --env production",
-    "css": "gulp css  --env development",
-    "build-css": "gulp css  --env production",
-    "images": "gulp images  --env development",
-    "build-images": "gulp images  --env production",
-    "script": "gulp script  --env development",
-    "build-script": "gulp script  --env production",
-    "libs": "gulp libs  --env development",
-    "build-libs": "gulp libs  --env production",
-    "test-scaffolding": "mocha  --recursive"
+    "build": "gatsby build",
+    "develop": "gatsby develop",
+    "start": "npm run develop",
+    "format": "prettier --write \"src/**/*.js\"",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": "git+https://github.com/hexiao-o/yunle-template-gulp.git",
-  "author": "hexiao-o",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/hexiao-o/yunle-template-gulp/issues"
-  },
-  "homepage": "https://github.com/hexiao-o/yunle-template-gulp#readme",
   "devDependencies": {
-    "autoprefixer": "^6.7.2",
-    "babel-preset-es2015": "^6.22.0",
-    "browser-sync": "^2.18.7",
-    "chai": "^3.5.0",
-    "chai-http": "^3.0.0",
-    "cssnano": "^3.10.0",
-    "eslint": "^3.15.0",
-    "eslint-config-airbnb": "^14.1.0",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^4.0.0",
-    "eslint-plugin-react": "^6.9.0",
-    "gulp": "^3.9.1",
-    "gulp-babel": "^6.1.2",
-    "gulp-base64": "^0.1.3",
-    "gulp-cache": "^0.4.5",
-    "gulp-changed": "^1.3.2",
-    "gulp-html-replace": "^1.6.2",
-    "gulp-htmlmin": "^3.0.0",
-    "gulp-imagemin": "^3.1.1",
-    "gulp-less": "^3.3.0",
-    "gulp-load-plugins": "^1.5.0",
-    "gulp-notify": "^3.0.0",
-    "gulp-plumber": "^1.1.0",
-    "gulp-postcss": "^6.3.0",
-    "gulp-rev-append": "^0.1.7",
-    "gulp-uglify": "^2.0.1",
-    "gulp-util": "^3.0.8",
-    "http-proxy-middleware": "^0.17.3",
-    "imagemin-pngquant": "^5.0.0",
-    "mkdir": "0.0.2",
-    "mocha": "^3.2.0",
-    "mockjs": "^1.0.1-beta3",
-    "node-mocks-http": "^1.5.6",
-    "rimraf": "^2.5.4",
-    "run-sequence": "^1.2.2"
+    "gatsby-plugin-less": "^2.0.7",
+    "less": "^3.8.1",
+    "prettier": "^1.14.2"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/gatsbyjs/gatsby-starter-default"
   }
 }
